One more change

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-	<h1>Hello Coursera! It great that i am able to amke changes</h1>
+	<h1>Hello Coursera! It great that i am able to make changes</h1>
 </body>
 </html>
